# game-programming-rust-sample

./: .gitignore  Cargo.toml  README.md
chapter01/: Cargo.toml
chapter01/src/: game.rs  main.rs
chapter02/: Cargo.toml
chapter02/src/: actor.rs  anim_sprite_component.rs  bg_sprite_component.rs  component.rs  game.rs  main.rs  math.rs  ship.rs  sprite_component.rs
chapter02/src/actors/: actor.rs  mod.rs  ship.rs
chapter02/src/components/: anim_sprite_component.rs  bg_sprite_component.rs  component.rs  mod.rs  (+1 more)
chapter03/: Cargo.toml
chapter03/resources/: README.md
chapter03/src/: entity_manager.rs  game.rs  main.rs  math.rs
chapter04/: Cargo.toml  build.rs
chapter04/resources/: README.md
chapter04/src/: game.rs
chapter05/: Cargo.toml
chapter05/resources/Shaders/: Sprite.frag
chapter05/src/: game.rs
chapter05/src/actors/: actor.rs  asteroid.rs  laser.rs  ship.rs
chapter05/src/components/: component.rs  input_component.rs  move_component.rs  sprite_component.rs
chapter05/src/graphics/: mod.rs  shader.rs  texture.rs  vertex_array.rs
chapter05/src/math/: matrix4.rs  mod.rs
chapter05/src/system/: entity_manager.rs  mod.rs  texture_manager.rs
chapter06/: Cargo.toml
chapter06/resources/: README.md
chapter06/src/: game.rs
chapter07/: Cargo.toml
chapter07/resources/: .gitignore  README.md
chapter07/src/: game.rs  main.rs
chapter08/: Cargo.toml
chapter08/resources/: README.md
chapter08/resources/Shaders/: Sprite.vert
chapter08/src/: game.rs
chapter08/src/actors/: actor.rs  laser.rs  ship.rs
chapter08/src/components/: circle_component.rs  component.rs  input_component.rs
chapter08/src/graphics/: mod.rs
chapter08/src/math/: vector2.rs
chapter08/src/system/: input_system.rs  mod.rs
chapter09/: Cargo.toml
chapter09/resources/: .gitignore  README.md
chapter09/src/: game.rs
chapter10/: Cargo.toml
chapter10/resources/: README.md
chapter10/src/: game.rs  main.rs
(+146 files in other folders)
