[package]
name = "chapter01"
version = "0.1.0"
edition = "2021"

[dependencies]

[dependencies.sdl2]
version = "0.37"
default-features = false
features = ["ttf", "image", "gfx", "mixer", "static-link", "use-vcpkg"]

[package.metadata.vcpkg]
dependencies = [
    "sdl2",
    "sdl2-image[libjpeg-turbo,tiff,libwebp]",
    "sdl2-ttf",
    "sdl2-gfx",
    "sdl2-mixer",
]
git = "https://github.com/microsoft/vcpkg"
rev = "2024.09.30"
